@@ -12,6 +12,8 @@ documents those changes that are of interest to users and admins.
  -- Applied slurmctld prolog bug fix from Dennis Leepow to backfill.c
  -- fixed quite a few typos (needed for debian packages)
  -- make it so slurmctld will core dump without --enable-debug set
+ -- Fix issue when doing a rollup on reservations before a cluster has been 
+    added. 
 
 * Changes in SLURM 2.0.8
 ========================
